--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,3 @@
-AUTHORS
+AUTHOR:
 
-... (list here, one each line, name and email)
-...
-
-Athors shall aknowledge the following people for they valuable contributions.
+Ricardo Gonçalves de Aguiar, ricardoaguiar@usp.br
